--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
+    "react-player": "^2.15.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "tailwindcss": "^3.4.1",
